Fix Text to Image Alignment

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -38,7 +38,7 @@ $color-accent: #0366d6;
 
 * {
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -166,13 +166,7 @@ hr {
   background-color: $header-bg-color;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
 
-  .typing-svg-container {
-    background: linear-gradient(120deg, #04020c, rgba(6, 44, 101, 0.9215686275), rgb(7, 14, 46));
-    display: inline-block;
-    padding: 10px;
-    border-radius: 10px;
-  }
-  
+ 
 
   @include large {
     padding: 5rem 6rem;
@@ -489,6 +483,18 @@ $color-accent: #919aa4;
     
     
   }
+}
+
+.playlist-text{
+  font-family: 'Abril Fatface',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.playlist-wrapper {
+  display: flex;
+  align-items: center;
+}
+.playlist-image {
+  border-radius: 10px;
+  margin-right: 10px;
 }
 
       /* Add your custom CSS styles here */
